altered pom in dashboardv2 to contain download root proxy for npm/node

--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -95,7 +95,8 @@
                         </goals>
                         <configuration>
                             <nodeVersion>${node-for-v2.version}</nodeVersion>
-                            <npmVersion>3.8.5</npmVersion>
+			    <npmVersion>3.8.5</npmVersion>
+			    <downloadRoot>https://artifactory.ing.net/artifactory/api/npm/releases_npm_all</downloadRoot>
                         </configuration>
                     </execution>
                     <execution>
