add workingdirectory in pom

--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -103,7 +103,8 @@
                         <goals>
                             <goal>npm</goal>
                         </goals>
-                        <configuration>
+			<configuration>
+   	                    <workingDirectory>${basedir}</workingDirectory>
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
