--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -88,7 +88,7 @@
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <executions>
-			<!--                    <execution>
+	            <execution>
                         <id>install node and npm</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
@@ -97,14 +97,15 @@
                             <nodeVersion>${node-for-v2.version}</nodeVersion>
 			    <npmVersion>3.8.5</npmVersion>
                         </configuration>
-		    </execution> -->
+		    </execution> 
                     <execution>
                         <id>npm install</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
 			<configuration>
-   	                    <workingDirectory>${basedir}</workingDirectory>
+				<!-- <workingDirectory>${basedir}</workingDirectory> -->
+
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
