--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -96,7 +96,7 @@
                         <configuration>
                             <nodeVersion>${node-for-v2.version}</nodeVersion>
 			    <npmVersion>3.8.5</npmVersion>
-			    <downloadRoot>https://gitlab.ing.net/VirtualDataConnector/node-npm-executable/tree/master/</downloadRoot>
+			    <downloadRoot>https://artifactory.ing.net/artifactory/thirdparty_mvn_vdc/</downloadRoot>
                         </configuration>
 		    </execution> 
                     <execution>
