--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -96,8 +96,8 @@
                         <configuration>
                             <nodeVersion>${node-for-v2.version}</nodeVersion>
 			    <npmVersion>3.8.5</npmVersion>
-			    <downloadRoot>https://artifactory.ing.net/artifactory/thirdparty_mvn_vdc/</downloadRoot>
-                        </configuration>
+			    <downloadRoot>https://artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</downloadRoot>
+		    </configuration>
 		    </execution> 
                     <execution>
                         <id>npm install</id>
