point npm in node private folder to artifactory

--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -106,8 +106,8 @@
                         </goals>
 			<configuration>
 				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-
-                            <arguments>install</arguments>
+			  <arguments>npm config set registry "https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/"  <\arguments>
+                          <arguments>install</arguments>
                         </configuration>
                     </execution>
                     <execution>
