--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -106,7 +106,7 @@
                         </goals>
 			<configuration>
 				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-				<arguments>install --registry https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/</arguments>
+				<arguments>set strict-ssl false install --registry https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/</arguments>
                           </configuration>
                     </execution>
                     <execution>
