<arguments> can't contain child elements in mojo

--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -106,10 +106,7 @@
                         </goals>
 			<configuration>
 				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-				<arguments>
-					<argument>install --registry=https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/</argument>
-					<argument>strict-ssl=false</argument>
-				</arguments>
+				<arguments>install --registry=https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/ strict-ssl=false</arguments>
                           </configuration>
                     </execution>
                     <execution>
