--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -98,16 +98,25 @@
 			    <npmVersion>3.8.5</npmVersion>
 			    <downloadRoot>https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</downloadRoot>
 		    </configuration>
-		    </execution> 
+	    </execution> 
+		<execution>
+			<id>set npm registry</id>
+		        <goals>
+		        	<goal>npm</goal>
+		        </goals>
+		        <configuration>
+		        	<arguments>config set registry https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/</arguments>
+			</configuration>
+		</execution>
                     <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
+                    	<id>npm install</id>
+                    	<goals>
+                        	<goal>npm</goal>
+			</goals>
 			<configuration>
 				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-				<arguments>install --registry=https://artifactory.ing.net/artifactory/api/npm/releases_npm_all/</arguments>
-                          </configuration>
+				<arguments>install</arguments>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>grunt dist</id>
