--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -99,7 +99,17 @@
 			    <downloadRoot>https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</downloadRoot>
 		    </configuration>
 	    </execution> 
-                    <execution>
+                     <execution>
+                    	<id>npm config list</id>
+                    	<goals>
+                        	<goal>npm</goal>
+			</goals>
+			<configuration>
+				<!-- <workingDirectory>${basedir}</workingDirectory> -->
+				<arguments>config list</arguments>
+                        </configuration>
+			</execution>                   
+			<execution>
                     	<id>npm install</id>
                     	<goals>
                         	<goal>npm</goal>
