--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -99,16 +99,6 @@
 			    <downloadRoot>https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</downloadRoot>
 		    </configuration>
 	    </execution> 
-                     <execution>
-                    	<id>npm config list</id>
-                    	<goals>
-                        	<goal>npm</goal>
-			</goals>
-			<configuration>
-				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-				<arguments>config list</arguments>
-                        </configuration>
-			</execution>                   
 			<execution>
                     	<id>npm install</id>
                     	<goals>
@@ -116,7 +106,7 @@
 			</goals>
 			<configuration>
 				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-				<arguments>install --registry=https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/api/npm/releases_npm_all/ --strict-ssl=false</arguments>
+				<arguments>install --registry=https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/api/npm/releases_npm_all/</arguments>
                         </configuration>
                     </execution>
                     <execution>
