--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -99,14 +99,24 @@
 			    <downloadRoot>https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</downloadRoot>
 		    </configuration>
 	    </execution> 
-			<execution>
+		<execution>
+			<id>git using https://git instead of git://</id>
+                    	<goals>
+                        	<goal>git</goal>
+			</goals>
+			<configuration>
+				<!-- <workingDirectory>${basedir}</workingDirectory> -->
+				<arguments>config --global url.https://github.com/.insteadOf git://github.com/</arguments>
+                        </configuration>
+                    </execution>
+        		<execution>
                     	<id>npm install</id>
                     	<goals>
                         	<goal>npm</goal>
 			</goals>
 			<configuration>
 				<!-- <workingDirectory>${basedir}</workingDirectory> -->
-				<arguments>install --registry=https://${env.jenkinsuser}:${env.jenkinspass}@artifactory.ing.net/artifactory/api/npm/releases_npm_all/</arguments>
+				<arguments>install</arguments>
                         </configuration>
                     </execution>
                     <execution>
