skiped site for docs

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <skipTests>true</skipTests>
-        <skipSite>false</skipSite>
+        <skipSite>true</skipSite>
     </properties>
 
     <reporting>
