--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -95,7 +95,7 @@
                         </goals>
                         <configuration>
                             <nodeVersion>${node-for-v2.version}</nodeVersion>
-                            <nodeDownloadRoot>https://${jenkinsuser}:${jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</nodeDownloadRoot>
+                            <!--<nodeDownloadRoot>https://${jenkinsuser}:${jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/@types/node/</nodeDownloadRoot>-->
                             <npmVersion>3.8.5</npmVersion>
                             <npmDownloadRoot>https://${jenkinsuser}:${jenkinspass}@artifactory.ing.net/artifactory/thirdparty_mvn_vdc/</npmDownloadRoot>
                         </configuration>
